--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-#??? ??? ???? ?? ?? ???
+#\uC2A4\uD504\uB9C1 \uBD80\uD2B8\uAC00 \uC81C\uACF5\uD558\uB294 \uAE30\uBCF8 \uC5D0\uC678 \uD398\uC774\uC9C0
 server.error.whitelabel.enabled=false
 
-#excpetion ????(true, false)
+#erver.error.include-exception=false : exception \uD3EC\uD568 \uC5EC\uBD80( true , false )
+#server.error.include-message=never : message \uD3EC\uD568 \uC5EC\uBD80
+#server.error.include-stacktrace=never : trace \uD3EC\uD568 \uC5EC\uBD80
+#server.error.include-binding-errors=never : errors \uD3EC\uD568 \uC5EC\uBD80
+#never : \uC0AC\uC6A9\uD558\uC9C0 \uC54A\uC74C
+#always :\uD56D\uC0C1 \uC0AC\uC6A9
+#on_param : \uD30C\uB77C\uBBF8\uD130\uAC00 \uC788\uC744 \uB54C \uC0AC\uC6A9
+
 server.error.include-exception=true
-# message ?? ??
-server.error.include-message=on_param
-#trace ?? ??
+server.error.include-message=always
 server.error.include-stacktrace=on_param
-#errors ?? ??
-server.error.include-binding-errors=on_para
+server.error.include-binding-errors=on_param
